--- a/clean-data/README.Rmd
+++ b/clean-data/README.Rmd
@@ -51,7 +51,7 @@ tbl1 <- files %>%
   map(~ .x %>%
         load_files() %>%
         select(COUNTRY, IDCNTRY, IDSTUD, BS3B1, BS3B11, BS3B9, BS3B4, BS3B13,
-               BS3B2, BS3B6, BS3B10, BS3B8, BS3B5, BS3B12, BS3B3)) %>% 
+               BS3B2, BS3B6, BS3B10, BS3B8, BS3B5, BS3B12, BS3B3, TOTWGT)) %>% 
   reduce(rbind) %>% 
   as_tibble() %>% 
   mutate(`ICCS_year` = 1999) %>%     # add survey year variable
@@ -131,6 +131,7 @@ tbl1 <- tbl1 %>%
   select(ICCS_year,
          COUNTRY,
          IDSTUD,
+         TOTWGTS = TOTWGT,
          obey    = BS3B1_bin,
          rights  = BS3B11_bin,
          local   = BS3B9_bin,
@@ -162,7 +163,7 @@ tbl2 <- files %>%
   map(~ .x %>%
         load_files() %>%
         select(COUNTRY, IDCNTRY, IDSTUD, IS2P21L, IS2P21I, IS2P21H, IS2P21K, IS2P21J, IS2P21A,
-               IS2P21C, IS2P21E, IS2P21D, IS2P21G, IS2P21F, IS2P21B)) %>% 
+               IS2P21C, IS2P21E, IS2P21D, IS2P21G, IS2P21F, IS2P21B, TOTWGTS)) %>% 
   reduce(rbind) %>% 
   as_tibble() %>% 
   mutate(`ICCS_year` = 2009) %>%     # survey year variable creation
@@ -211,6 +212,7 @@ tbl2 <- tbl2 %>%
   select(ICCS_year,
          COUNTRY,
          IDSTUD,
+         TOTWGTS,
          obey    = IS2P21L_bin,
          rights  = IS2P21I_bin,
          local   = IS2P21H_bin,
@@ -242,7 +244,7 @@ tbl3 <- files %>%
   map(~ .x %>%
         load_files() %>%
         select(COUNTRY, IDCNTRY, IDSTUD, IS3G23L, IS3G23I, IS3G23H, IS3G23K, IS3G23J,
-               IS3G23A, IS3G23C, IS3G23E, IS3G23D, IS3G23G, IS3G23F, IS3G23B)) %>% 
+               IS3G23A, IS3G23C, IS3G23E, IS3G23D, IS3G23G, IS3G23F, IS3G23B, TOTWGTS)) %>% 
   reduce(rbind) %>% 
   as_tibble()%>% 
   mutate(`ICCS_year` = 2016) %>%    # create survey year variable
@@ -292,6 +294,7 @@ tbl3 <- tbl3 %>%
   select(ICCS_year,
          COUNTRY,
          IDSTUD,
+         TOTWGTS,
          obey    = IS3G23L_bin,
          rights  = IS3G23I_bin,
          local   = IS3G23H_bin,
@@ -340,12 +343,12 @@ cit_norm_indicators <- vars(obey, rights, local, work, envir, vote, history, res
 
 tbl <- tbl %>% 
   mutate_at(cit_norm_indicators,
-            funs(case_when(
+            funs(as.integer(case_when(
               . == "not important" ~ 0,
               . == "important"     ~ 1
-            ))
+            )))
   ) %>% 
-  mutate_if(is.double, as.integer) %>% 
+  mutate_at(vars(ICCS_year, IDSTUD), as.integer) %>% 
   mutate(COUNTRY = as.character(COUNTRY))
 
 tbl %>% head()
@@ -384,7 +387,7 @@ Means of citizenship norm indicators by country and year.
 # count and percent of responses to "obey" grouped by year
 means <- tbl %>%
   group_by(COUNTRY, ICCS_year) %>% 
-  summarize_at(cit_norm_indicators, funs(mean(., na.rm = TRUE)))
+  summarize_at(cit_norm_indicators, funs(round(mean(., na.rm = TRUE), 3)))
 
 means %>% 
   knitr::kable()
@@ -413,44 +416,129 @@ write_xlsx(list(means = means, missing = missing), "output/citizenship-norm-indi
 
 ## Figures:
 
-Means for twelve citizenship norm indicators for only the 14 countries that are included in all three waves of the survey.
+#### Means for twelve citizenship norm indicators for only the 14 countries that are included in all three waves of the survey.
 
-```{r plots}
+First, create the table to be used for plotting.
 
+```{r, warning = FALSE}
 all_wave_countries <- tbl %>%
   count(COUNTRY, ICCS_year) %>% 
   count(COUNTRY) %>%
   filter(nn == 3) %>% 
   pull(COUNTRY)
 
+# table with lower and upper limits for error bars
 plot_tbl <- tbl %>% 
   filter(COUNTRY %in% all_wave_countries) %>% 
   group_by(ICCS_year) %>% 
-  summarize_at(cit_norm_indicators, funs(mean(., na.rm = TRUE)))
+  summarize_at(cit_norm_indicators, funs(t.test(.) %>%
+                                           broom::tidy() %>%
+                                           mutate(mean_ci = paste(estimate, conf.low, conf.high)) %>%
+                                           pull(mean_ci))) %>% 
+  gather(Indicator, value, -ICCS_year) %>% 
+  mutate(value = str_split(value, " "),
+         cols = map(value, ~ data.frame(t(.)))) %>% 
+  unnest(cols) %>% 
+  select(-value) %>% 
+  mutate(mean  = as.numeric(X1),
+         lower = as.numeric(X2),
+         upper = as.numeric(X3)) %>% 
+  select(-c(X1, X2, X3))
 
 plot_tbl %>% 
+  mutate_if(is.numeric, round, 3) %>% 
   knitr::kable()
+```
+
+Line plots:
+
+```{r line-plots-all}
 
 # line plot with year on x-axis, lines colored by indicator type
 plot_tbl %>% 
-  gather(Indicator, value, -ICCS_year) %>% 
-  ggplot(aes(x = ICCS_year, y = value, group = Indicator, colour = Indicator)) +
+  ggplot(aes(x = ICCS_year, y = mean, group = Indicator, colour = Indicator)) +
+  geom_errorbar(aes(ymin = lower, ymax = upper), width = .3) +
   geom_line() +
   geom_point() +
+  lims(y = c(0, 1)) +
   labs(x = "Year", y = "Mean", title = "Mean Citizenship Norm Indicators By Survey Year")
 
 ggsave("output/mean-citizenship-norm-line-plot-by-year.png")
+```
+
+The above plot includes all indicators on one plot, but the confidence intervals are so narrow they are hard to see for each individual indicator.  An alternative way to present the same data is to plot them separately and `facet_wrap()` the plots so they are all in one image.
+
+```{r line-plots-facet}
+# line plot with year on x-axis, lines colored by indicator type
+plot_tbl %>% 
+  ggplot(aes(x = ICCS_year, y = mean, group = Indicator, colour = Indicator)) +
+  geom_errorbar(aes(ymin = lower, ymax = upper), width = .5) +
+  geom_line() +
+  geom_point() +
+  facet_wrap(~Indicator, scales = "free") +
+  labs(x = "Year", y = "Mean", title = "Mean Citizenship Norm Indicators By Survey Year") +
+  theme(legend.position = "none")
+
+ggsave("output/mean-citizenship-norm-line-plot-by-year-facet.png")
+```
+
+Bar plots:
+
+```{r}
 
 # bar plot with indicators on x-axis, lines colored by year
 plot_tbl %>% 
-  gather(Indicator, value, -ICCS_year) %>% 
-  mutate(Year = as.factor(ICCS_year),
+  mutate(Year      = as.factor(ICCS_year),
          Indicator = factor(Indicator, ordered = TRUE, levels = c("obey", "rights", "local", "work", "envir", "vote", "history",
                                                                   "respect", "news", "protest", "discuss", "party"))) %>% 
-  ggplot(aes(x = Indicator, y = value, fill = Year)) +
+  ggplot(aes(x = Indicator, y = mean, fill = Year)) +
   geom_bar(stat = "identity", position = position_dodge()) +
+  geom_errorbar(aes(ymin = lower, ymax = upper), width = .5, position = position_dodge(.9)) +
   labs(x = "Indicator", y = "Mean", title = "Mean Citizenship Norm Indicators By Survey Year")
 
 ggsave("output/mean-citizenship-norm-bar-plot-by-indicator.png")
+```
 
+
+#### Means for twelve citizenship norm indicators in 2016 by country
+
+Looking at 2016 data only, plot means for all cit norm indicators by country.
+
+```{r, warning = FALSE}
+
+country_plot_tbl <- tbl %>% 
+  filter(ICCS_year == 2016) %>% 
+  group_by(COUNTRY) %>% 
+  summarize_at(cit_norm_indicators, funs(t.test(.) %>%
+                                           broom::tidy() %>%
+                                           mutate(mean_ci = paste(estimate, conf.low, conf.high)) %>%
+                                           pull(mean_ci))) %>% 
+  gather(Indicator, value, -COUNTRY) %>% 
+  mutate(value = str_split(value, " "),
+         cols = map(value, ~ data.frame(t(.)))) %>% 
+  unnest(cols) %>% 
+  select(-value) %>% 
+  mutate(mean  = as.numeric(X1),
+         lower = as.numeric(X2),
+         upper = as.numeric(X3),
+         Indicator = factor(Indicator, ordered = TRUE, levels = c("obey", "rights", "local", "work", "envir", "vote", "history",
+                                                                  "respect", "news", "protest", "discuss", "party"))) %>% 
+  select(-c(X1, X2, X3))
+
+country_plot_tbl %>% 
+  head()
+```
+
+Plot with countries on x-axis, `facet_wrap` by indicator.
+
+```{r, fig.height = 35}
+country_plot_tbl %>% 
+  ggplot(aes(x = COUNTRY, y = mean, fill = COUNTRY)) +
+  geom_bar(stat = "identity", position = position_dodge()) +
+  geom_errorbar(aes(ymin = lower, ymax = upper), width = .5, position = position_dodge(.9)) +
+  facet_wrap(~Indicator, scales = "free", ncol = 1) +
+  labs(x = "Indicator", y = "Mean", title = "Mean Citizenship Norm Indicators in 2016 By Country") +
+  theme(legend.position = "none")
+
+ggsave("output/mean-citizenship-norm-bar-plot-by-country-by-indicator-2016-only.png")
 ```
