--- a/clean-data/README.Rmd
+++ b/clean-data/README.Rmd
@@ -125,132 +125,54 @@ bin_vars <- original_vars %>%
 map2(original_vars, bin_vars, ~ tbl1 %>% count(!!sym(.x), !!sym(.y)))
 ```
 
-
 Recode of individual-level control vars
 
-Gender
-
-```{r}
-tbl1 %>% 
-  count(GENDER)
-```
-
 ```{r}
 
-# recode
 tbl1 <- tbl1 %>% 
-  mutate(FEMALE_bin = fct_collapse(GENDER, 
-  "0" = "(0) Male",
-  "1" = "(1) Female"))
+  mutate(female = ifelse(GENDER == "(0) Male", 0, 1),    # gender
+         books = case_when(                              # books in respondent's home
+           BSGBOOK == "(1) None"          ~ 0,
+           BSGBOOK == "(2) 1 - 10"        ~ 0,
+           BSGBOOK == "(3) 11 - 50"       ~ 1,
+           BSGBOOK == "(4) 51 - 100"      ~ 1,
+           BSGBOOK == "(5) 101 - 200"     ~ 2,
+           BSGBOOK == "(6) More than 200" ~ 3
+         ),
+         edexp = case_when(                              # expected number of additional educ years
+           EXPEDUC == "(0) 0"    ~ 0,
+           EXPEDUC == "(1) 1-2"  ~ 0,
+           EXPEDUC == "(2) 3-4"  ~ 0,
+           EXPEDUC == "(3) 5-6"  ~ 1,
+           EXPEDUC == "(4) 7-8"  ~ 1,
+           EXPEDUC == "(5) 9-10" ~ 2,
+           EXPEDUC == "(6) 10+"  ~ 2
+         ),
+         ed_mom = case_when(                             # mother education
+           BSGEDUM == "(1) no.elem.school"          ~ 0,
+           BSGEDUM == "(2) Fin. elem. sch."         ~ 0,
+           BSGEDUM == "(3) Fin.s.high sch."         ~ 0,
+           BSGEDUM == "(4) Fin.high sch."           ~ 1,
+           BSGEDUM == "(5) Sme technic.educ. after" ~ 2,
+           BSGEDUM == "(6) sme college,univ."       ~ 2,
+           BSGEDUM == "(7) bach. degree"            ~ 2
+         ),
+         ed_dad = case_when(                             # father education
+           BSGEDUF == "(1) No.elem.school"     ~ 0,
+           BSGEDUF == "(2) Fin. elem. sch."    ~ 0,
+           BSGEDUF == "(3) Fin.s.high sch."    ~ 0,
+           BSGEDUF == "(4) Fin.high sch."      ~ 1,
+           BSGEDUF == "(5) Sme techn.educ."    ~ 2,
+           BSGEDUF == "(6) Sme college, univ." ~ 2,
+           BSGEDUF == "(7) Bach. degree"       ~ 2
+         )) 
 
-# confirm correct recode
-tbl1 %>%
-  count(FEMALE_bin, GENDER) 
+# check recodes
+sociodem_vars <- c("GENDER", "BSGBOOK", "EXPEDUC", "BSGEDUM", "BSGEDUF")
+recoded_vars  <- c("female", "books", "edexp", "ed_mom", "ed_dad")
+
+map2(recoded_vars, sociodem_vars, ~ tbl1 %>% count(!!sym(.x), !!sym(.y)))
 ```
-
-Books in home
-
-```{r}
-tbl1 %>% 
-  count(BSGBOOK)
-```
-
-
-```{r}
-
-# recode
-tbl1 <- tbl1 %>% 
-  mutate(BSGBOOK_3 = fct_collapse(BSGBOOK, 
-  "0 to 50" = c("(1) None", "(2) 1 - 10", "(3) 11 - 50"),
-  "51-200" = c("(4) 51 - 100", "(5) 101 - 200"),
-  "201+" = "(6) More than 200)"))
-  
-# confirm correct recode
-tbl1 %>%
-  count(BSGBOOK_3, BSGBOOK) 
-```
-
-```{r}
-
-# recode
-tbl1 <- tbl1 %>% 
-  mutate(BSGBOOK_4 = fct_collapse(BSGBOOK, 
-  "0 to 10 = c("(1) None", "(2) 1 - 10"),
-  "11-100" = c("(3) 11 - 50", "(4) 51 - 100"),
-  "101-200" = "(5) 101 - 200",
-  "201+" = "(6) More than 200)"))
-  
-# confirm correct recode
-tbl1 %>%
-  count(BSGBOOK_4, BSGBOOK) 
-```
-
-
-Expected number of additional education years
-
-```{r}
-tbl1 %>% 
-  count(EXPEDUC)
-```
-
-```{r}
-
-# recode
-tbl1 <- tbl1 %>% 
-  mutate(EXPEDUC_3 = fct_collapse(EXPEDUC, 
-  "0 to 4" = c("(0) 0", "(1) 1-2", "(2) 3-4"),
-  "5-8" = c("(3) 5-6", "(4) 7-8"),
-  "9+" = c("(5) 9-10", "(6) 10+")))
-  
-# confirm correct recode
-tbl1 %>%
-  count(EXPEDUC_3, EXPEDUC) 
-```
-
-
-Mother education
-
-```{r}
-tbl1 %>% 
-  count(BSGEDUM)
-```
-
-```{r}
-
-# recode
-tbl1 <- tbl1 %>% 
-  mutate(BSGEDUM_3 = fct_collapse(BSGEDUM, 
-  "(0) Less than HS" = c("(1) no.elem.school", "(2) Fin. elem. sch.", "(3) Fin.s.high sch."),
-  "(1) HS" = "(4) Fin.high sch.",
-  "(2) Post-HS" = c("(5) Sme technic.educ. after", "(6) sme college,univ.", "(7) bach. degree")))
-  
-# confirm correct recode
-tbl1 %>%
-  count(BSGEDUM_3, BSGEDUM) 
-```
-
-
-Father education
-
-```{r}
-tbl1 %>% 
-  count(BSGEDUF)
-```
-
-```{r}
-
-# recode
-tbl1 <- tbl1 %>% 
-  mutate(BSGEDUF_3 = fct_collapse(BSGEDUF, 
-  "(0) Less than HS" = c("(1) no.elem.school", "(2) Fin. elem. sch.", "(3) Fin.s.high sch."),
-  "(1) HS" = "(4) Fin.high sch.",
-  "(2) Post-HS" = c("(5) Sme technic.educ. after", "(6) sme college,univ.", "(7) bach. degree")))
-  
-# confirm correct recode
-tbl1 %>%
-  count(BSGEDUF_3, BSGEDUF) 
-```
-
 
 Select for LCA vars tibble, including rename all mutated variables and display first five lines of dataframe.
 
@@ -273,11 +195,11 @@ tbl1 <- tbl1 %>%
          protest = BS3B5_bin,
          discuss = BS3B12_bin,
          party   = BS3B3_bin,
-         female  = FEMALE_bin,
-         books   = BSGBOOK_4,
-         edexp   = EXPEDUC_3,
-         ed_mom  = BSGEDUM_3,
-         ed_dad  = BSGEDUF_3)
+         female,
+         books,
+         edexp,
+         ed_mom,
+         ed_dad)
 
 tbl1 %>% head()
 ```
@@ -338,58 +260,50 @@ bin_vars <- original_vars %>%
 map2(original_vars, bin_vars, ~ tbl2 %>% count(!!sym(.x), !!sym(.y)))
 ```
 
-Gender
-
-```{r}
-tbl2 %>% 
-  count(SGENDER)
-```
+Recode of individual-level control vars
 
 ```{r}
 
-# recode
 tbl2 <- tbl2 %>% 
-  mutate(FEMALE_bin = fct_collapse(SGENDER, 
-  "0" = "(0) BOY",
-  "1" = "(1) GIRL"))
+  mutate(female = ifelse(SGENDER == "(0) BOY", 0, 1),    # gender
+         books = case_when(                              # books in respondent's home
+           IS2G11 == "(1) 0-10 BOOKS"          ~ 0,
+           IS2G11 == "(2) 11-25 BOOKS"         ~ 1,
+           IS2G11 == "(3) 26-100 BOOKS"        ~ 1,
+           IS2G11 == "(4) 101-200 BOOKS"       ~ 2,
+           IS2G11 == "(5) 201-500 BOOKS"       ~ 3,
+           IS2G11 == "(6) MORE THAN 500 BOOKS" ~ 3
+         ),
+         edexp = case_when(                              # expected number of additional educ years
+           IS2G03 == "(1) <ISCED 5A OR 6>"      ~ 2,
+           IS2G03 == "(2) <ISCED 4 OR 5B>"      ~ 2,
+           IS2G03 == "(3) <ISCED 3>"            ~ 1,
+           IS2G03 == "(4) <ISCED 2>"            ~ 0,
+           IS2G03 == "(5) NOT EXPECT <ISCED 2>" ~ 0
+         ),
+         ed_mom = case_when(                             # mother education
+           IS2G07 == "(1) <ISCED 5A OR 6>"            ~ 2,
+           IS2G07 == "(2) <ISCED 4 OR 5B>"            ~ 2,
+           IS2G07 == "(3) <ISCED 3>"                  ~ 1,
+           IS2G07 == "(4) <ISCED 2>"                  ~ 0,
+           IS2G07 == "(5) <ISCED 1>"                  ~ 0,
+           IS2G07 == "(6) DID NOT COMPLETE <ISCED 1>" ~ 0
+         ),
+         ed_dad = case_when(                             # father education
+           IS2G09 == "(1) <ISCED 5A OR 6>"            ~ 2,
+           IS2G09 == "(2) <ISCED 4 OR 5B>"            ~ 2,
+           IS2G09 == "(3) <ISCED 3>"                  ~ 1,
+           IS2G09 == "(4) <ISCED 2>"                  ~ 0,
+           IS2G09 == "(5) <ISCED 1>"                  ~ 0,
+           IS2G09 == "(6) DID NOT COMPLETE <ISCED 1>" ~ 0
+         )) 
 
-# confirm correct recode
-tbl2 %>%
-  count(FEMALE_bin, SGENDER) 
+# check recodes
+sociodem_vars <- c("SGENDER", "IS2G11", "IS2G03", "IS2G07", "IS2G09")
+recoded_vars  <- c("female", "books", "edexp", "ed_mom", "ed_dad")
+
+map2(recoded_vars, sociodem_vars, ~ tbl2 %>% count(!!sym(.x), !!sym(.y)))
 ```
-
-Books
-
-```{r}
-tbl2 %>% 
-  count(IS2G11)
-```
-
-```{r}
-
-# recode
-tbl2 <- tbl2 %>% 
-  mutate(BOOK_4 = fct_collapse(IS2G11, 
-  "0 to 10" = "(1) 0-10 BOOKS",
-  "11-100" = c("(2) 11-25 BOOKS", "(3) 26-100 BOOKS"),
-  "101-200" = "(4) 101-200 BOOKS", 
-  "201+" = c("(5) 201-500 BOOKS", "(6) MORE THAN 500 BOOKS")))
-
-  
-# confirm correct recode
-tbl2 %>%
-  count(BOOK_4, IS2G11) 
-```
-
-
-XXNOTE: 
-Still need to recode
-IS2G03 == edexp
-IS2G07 == ed_mom
-IS2G09 == ed_dad
-
-And put in "select" command below
-
 
 Select for LCA vars tibble, including rename all mutated variables and display first five lines of dataframe.
 
@@ -412,8 +326,11 @@ tbl2 <- tbl2 %>%
          protest = IS2P21G_bin,
          discuss = IS2P21F_bin,
          party   = IS2P21B_bin,
-         female =  FEMALE_bin,
-         books   = BOOK_4) 
+         female,
+         books,
+         edexp,
+         ed_mom,
+         ed_dad) 
 
 tbl2 %>% head()
 ```
@@ -475,57 +392,46 @@ bin_vars <- original_vars %>%
 map2(original_vars, bin_vars, ~ tbl3 %>% count(!!sym(.x), !!sym(.y)))
 ```
 
-
-Gender
-
-```{r}
-tbl3 %>% 
-  count(S_GENDER)
-```
+Recode of individual-level control vars
 
 ```{r}
 
-# recode
 tbl3 <- tbl3 %>% 
-  mutate(FEMALE_bin = fct_collapse(S_GENDER, 
-  "0" = "(0) Boy",
-  "1" = "(1) Girl"))
+  mutate(female = ifelse(S_GENDER == "(0) BOY", 0, 1),   # gender
+         books = case_when(                              # books in respondent's home
+           IS3G11 == "(1) None or very few (0–10 books)"                                ~ 0,
+           IS3G11 == "(2) Enough to fill one shelf (11–25 books)"                       ~ 1,
+           IS3G11 == "(3) Enough to fill one bookcase (26–100 books)"                   ~ 1,
+           IS3G11 == "(4) Enough to fill two bookcase (101–200 books)"                  ~ 2,
+           IS3G11 == "(5) Enough to fill three or more bookcases (more than 200 books)" ~ 3
+         ),
+         edexp = case_when(                              # expected number of additional educ years
+           IS3G03 == "(1) <ISCED level 6, 7 or 8>"   ~ 2,
+           IS3G03 == "(2) <ISCED level 4 or 5>"      ~ 2,
+           IS3G03 == "(3) <ISCED level 3>"           ~ 1,
+           IS3G03 == "(4) <ISCED level 2> or below" ~ 0
+         ),
+         ed_mom = case_when(                             # mother education
+           IS3G07 == "(1) <ISCED level 6, 7 or 8>"              ~ 2,
+           IS3G07 == "(2) <ISCED level 4 or 5>"                 ~ 2,
+           IS3G07 == "(3) <ISCED level 3>"                      ~ 1,
+           IS3G07 == "(4) <ISCED level 2>"                      ~ 0,
+           IS3G07 == "(5) She did not complete <ISCED level 2>" ~ 0
+         ),
+         ed_dad = case_when(                             # father education
+           IS3G09 == "(1) <ISCED level 6, 7 or 8>"             ~ 2,
+           IS3G09 == "(2) <ISCED level 4 or 5>"                ~ 2,
+           IS3G09 == "(3) <ISCED level 3>"                     ~ 1,
+           IS3G09 == "(4) <ISCED level 2>"                     ~ 0,
+           IS3G09 == "(5) He did not complete <ISCED level 2>" ~ 0
+         )) 
 
-# confirm correct recode
-tbl3 %>%
-  count(FEMALE_bin, S_GENDER) 
+# check recodes
+sociodem_vars <- c("S_GENDER", "IS3G11", "IS3G03", "IS3G07", "IS3G09")
+recoded_vars  <- c("female", "books", "edexp", "ed_mom", "ed_dad")
 
+map2(recoded_vars, sociodem_vars, ~ tbl3 %>% count(!!sym(.x), !!sym(.y)))
 ```
-
-
-
-Books in home
-
-```{r}
-tbl3 %>% 
-  count(IS3G11)
-```
-
-```{r}
-
-# recode
-tbl3 <- tbl3 %>% 
-  mutate(BOOK_3 = fct_collapse(IS3G11, 
-  "0 to 10" = "(1) None or very few (0–10 books)"),
-  "11-100"  = c("(2) Enough to fill one shelf (11–25 books)", "(3) Enough to fill one bookcase (26–100 books)"),
-  "101-200" = "(4) Enough to fill two bookcase (101–200 books)"),
-  "201+" = "(5) Enough to fill three or more bookcases (more than 200 books"))
-
-# confirm correct recode
-tbl3 %>%
-  count(BOOK_3, IS3G11) 
-```
-
-XX
-still need to recode
-IS3G03 == edexp
-IS3G07 == ed_mom
-IS3G09 == IS3G09
 
 Select for LCA vars tibble, including rename all mutated variables and display first five lines of dataframe.
 
@@ -547,7 +453,12 @@ tbl3 <- tbl3 %>%
          news    = IS3G23D_bin,
          protest = IS3G23G_bin,
          discuss = IS3G23F_bin,
-         party   = IS3G23B_bin)
+         party   = IS3G23B_bin,
+         female,
+         books,
+         edexp,
+         ed_mom,
+         ed_dad)
 
 tbl3 %>% head()
 ```
@@ -616,7 +527,7 @@ Export recoded data for LCA - RdM to current `ICCS-2019/clean-data` directory.
 
 ```{r}
 
-write_delim(tbl, "output/clean_tbl.dat", na = ".")
+write_delim(tbl, "output/clean_tbl.dat", delim = ",")
 ```
 
 ## Tables:
@@ -709,7 +620,7 @@ ggsave("output/mean-citizenship-norm-line-plot-by-year.png")
 
 The above plot includes all indicators on one plot, but the confidence intervals are so narrow they are hard to see for each individual indicator.  An alternative way to present the same data is to plot them separately and `facet_wrap()` the plots so they are all in one image.
 
-```{r line-plots-facet}
+```{r line-plots-facet-1}
 # line plot with year on x-axis, lines colored by indicator type
 plot_tbl %>% 
   ggplot(aes(x = ICCS_year, y = mean, group = Indicator, colour = Indicator)) +
@@ -727,7 +638,7 @@ ggsave("output/mean-citizenship-norm-line-plot-by-year-facet.png")
 
 Adapting y-axis to consistent
 
-```{r line-plots-facet}
+```{r line-plots-facet-2}
 # line plot with year on x-axis, lines colored by indicator type
 plot_tbl %>% 
   ggplot(aes(x = ICCS_year, y = mean, group = Indicator, colour = Indicator)) +
@@ -745,7 +656,7 @@ ggsave("output/mean-citizenship-norm-line-plot-by-year-facet.png")
 
 Re-ordering to highest mean top left
 
-```{r line-plots-facet}
+```{r line-plots-facet-3}
 # line plot with year on x-axis, lines colored by indicator type
 plot_tbl %>% 
   mutate(Indicator=fct_relevel(Indicator,c("obey", "rights", "local", "work", "envir", "vote", "history", "respect", "news", "protest", "discuss", "party"))) %>% 
@@ -763,7 +674,7 @@ ggsave("output/mean-citizenship-norm-line-plot-by-year-facet.png")
 
 Adding specific years on x-axis
 
-```{r line-plots-facet}
+```{r line-plots-facet-4}
 # line plot with year on x-axis, lines colored by indicator type
 plot_tbl %>% 
   mutate(Indicator=fct_relevel(Indicator,c("obey", "rights", "local", "work", "envir", "vote", "history", "respect", "news", "protest", "discuss", "party"))) %>% 
